--- a/ansible/roles/parasight_webserver/templates/apache/parasight.conf.j2
+++ b/ansible/roles/parasight_webserver/templates/apache/parasight.conf.j2
@@ -20,6 +20,7 @@
     ProxyPassReverse / unix:/var/lib/parasight/gunicorn.sock|http://localhost/
     #ProxyTimeout 180
 
+    Alias /static/uploads /home/parasight/uploads
     Alias /static/parasight /home/parasight/git/parasight/parasight/static/parasight
     Alias /static /home/parasight/virtualenv/parasight_{{ parasight_python }}/lib/{{ parasight_python_ver }}/site-packages/django/contrib/admin/static
 
@@ -29,6 +30,11 @@
     SSLCertificateKeyFile {{ apache_etc }}/ssl/apache.key
 
     Header always set Strict-Transport-Security "max-age=63072000; includeSubDomains"
+
+    <Directory /home/parasight/uploads>
+        Allow from all
+        Require all granted
+    </Directory>
 
     <Directory /home/parasight/git/parasight>
         Allow from all
